# charon

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  PROSE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: pages.yml  release.yml  version.yml
charon-icon.icon/: icon.json
docs/adr/: 0001-ensemble-single-harness-v1.md  0002-trials-never-push-winner-only.md  0003-swarm-is-persisted-and-re-attaches-across-restart.md
site/: index.html
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentCard.tsx  AgentLaunchForm.tsx  AppErrorBoundary.tsx  AsciiField.tsx  AsciiMoon.tsx  BranchOps.tsx  ChecksPanel.tsx  CommandPalette.tsx  CommitDiffModal.tsx  Composer.tsx  ControlCenter.tsx  DiffViewer.tsx  FileTree.tsx  Findings.tsx  Launcher.tsx  Markdown.tsx  MergeControl.tsx  ModelPicker.tsx  NewDraftWorkspace.tsx  Panels.tsx  PrMeta.tsx  PrOverflowMenu.tsx  PrReviewFilterBuilder.tsx  PrStackDrawer.tsx  PrStackList.tsx  PrWorkspace.tsx  PromptInput.tsx  ProposalCard.tsx  RepoApp.tsx  ReviewerMenus.tsx  ShortcutRecorder.tsx  SubmitForReview.tsx  SwarmHost.tsx  common.tsx  flow.ts  icons.tsx  useResizablePanel.tsx
src/components/views/: ActivityView.tsx  BabysitView.tsx  DraftsView.tsx  ReviewView.tsx  SettingsView.tsx
src/lib/: acp.ts  agent-runs.ts  agents.ts  commands.ts  commit.check.ts  commit.ts  defaults.ts  diff.ts  events.ts  flows.ts  github.ts  highlight.ts  nav.ts  notify-nav.ts  notify.ts  pr-review-filters.ts  pr-stacks.ts  shortcuts.ts  skills.ts  store.ts  swarm.ts  tauri.ts  template.ts  threads.ts  ui.ts  updater.ts  worktree.ts  zoom.ts
tests/integration/: acp-harnesses.test.mjs
