[package]
name = "charon-app"
version = "0.2.1"
description = "Charon — human-in-the-loop GitHub PR agent desktop app"
edition = "2021"

[[bin]]
name = "charon"
path = "src/main.rs"

[lib]
name = "charon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
urlencoding = "2"

[profile.dev]
incremental = true
