[package]
name = "charon-app"
version = "1.3.11"
description = "Charon — human-in-the-loop GitHub PR agent desktop app"
edition = "2021"

[[bin]]
name = "charon"
path = "src/main.rs"

[lib]
name = "charon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
urlencoding = "2"

[profile.dev]
incremental = true

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2"
